# kaleo

./: .gitignore  README.md
apis/: bundle_apis.py
apis/common/: default.yml
apis/kaleo-core/: kaleo-core.yml
apis/kaleo-core/components/: responses.yml  (+1 more)
apis/scripts/: README.md  bundle_apis.py  generate_api.py
docker/: docker-compose.dev.yml
services/core/: kaleo_api_tests.postman_collection.json
services/core/code/: .env.template  .gitignore  pyproject.toml
services/core/code/kaleo_core/: app.py  config.py  logging.py
services/core/code/kaleo_core/api/v1/: __init__.py  init.py  login.py  register.py  users.py
services/core/code/kaleo_core/db/: database.py
services/core/code/kaleo_core/db/models/: __init__.py  auth_provider_type_enum.py  tenant.py  user.py  user_google_details.py  user_microsoft_details.py  user_tenant.py
services/core/code/kaleo_core/middleware/: auth.py
services/core/code/kaleo_core/scripts/: serve.py  serve_lt.py
services/core/code/kaleo_core/services/: jwt_service.py  oauth_service.py  user_service.py
services/core/code/kaleo_core_api_server/: main.py  security_api.py
services/core/code/kaleo_core_api_server/apis/: default_api.py  default_api_base.py  login_api.py  login_api_base.py  register_api.py  register_api_base.py  users_api.py  users_api_base.py
services/core/code/kaleo_core_api_server/models/: default_error_response.py  login_request.py  login_response_body.py  o_auth_token_request.py  register_request.py  user_profile.py
services/core/code/resources/: configmap.yml
services/pgdb/: Dockerfile  init.sql
(+47 files in other folders)
